welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    case (a,b,c) if a==b&&a==c =>20
                                 ^greenTicket:5: error: missing parameter type
    (_,_,_) =>10
     ^greenTicket:5: error: missing parameter type
    (_,_,_) =>10
       ^greenTicket:5: error: missing parameter type
    (_,_,_) =>10
         ^