welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  (a,b,c) match {
    case (a,b,c) if a!=b&&a!=c&&b!=c =>0
    case (a,b,c) if a==b&&a==c =>20
    (_,_,_) =>10
    
  }
}